# Farming-Management

./: CMakeLists.txt  README.md
Config/: graphics.ini
cppfiles/: AlertDialog.cpp  Animation.cpp  CreditState.cpp  EndAndReportScreen.cpp  EventManager.cpp  Game.cpp  GameInfo.cpp  GameState.cpp  GraphicsSettings.cpp  Gui.cpp  MainMenuState.cpp  MissionManager.cpp  PauseMenu.cpp  PlayerGUI.cpp  ProfileState.cpp  SettingsState.cpp  Sound.cpp  SoundManager.cpp  State.cpp  event.cpp  farm.cpp  field.cpp  main.cpp  mission.cpp  player.cpp  product.cpp  pugixml.cpp  save.cpp  stdafx.cpp  timer.cpp  trader.cpp  tutorial.cpp  upgrade.cpp  warehouse.cpp
headers/: AlertDialog.h  Animation.h  CreditState.h  EndAndReportScreen.h  EventManager.h  Game.h  GameInfo.h  GameState.h  GraphicsSettings.h  Gui.h  MainMenuState.h  MissionManager.h  PauseMenu.h  PlayerGUI.h  ProfileState.h  SettingsState.h  Sound.h  SoundManager.h  State.h  event.h  farm.h  field.h  mission.h  player.h  product.h  save.h  stdafx.h  timer.h  trader.h  tutorial.h  upgrade.h  warehouse.h
